# cml-depression-poc

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: context_evaluation.yaml  context_weights.yaml  dsm_gate.yaml  ema.yaml  episode.yaml  indicators.yaml  reliability.yaml
config/baselines/: README.md  neutral_baseline.json
config/mock_data/: neutral_biomarkers.yaml  neutral_context_markers.yaml
docs/evaluation/: evaluation-heatmap-all-indicators.py  evaluation-heatmap.py  verify_biomarker_determinism.py  verify_context_determinism.py
src/: __init__.py
src/api/: dependencies.py  exceptions.py  main.py
src/core/: analysis.py  baseline_config.py  config.py  data_reader.py  dsm_gate.py  indicator_computation.py  mock_data.py  persistence.py  pipeline.py
src/dashboard/: app.py
src/shared/: config.py  database.py  logging.py  models.py
tests/: conftest.py
tests/test_api/: test_biomarker_retrieval.py  test_biomarkers.py  test_context.py  test_context_retrieval.py  test_dependencies.py  test_exceptions.py  test_health.py  test_indicator_retrieval.py
tests/test_core/: conftest.py  test_baseline_config.py  test_biomarker_membership.py  test_biomarker_processor.py  test_config.py  test_context_evaluator.py  test_context_history.py  test_context_strategies.py  test_context_weights.py  test_daily_aggregator.py  test_data_reader.py  test_dsm_gate.py  test_indicator_computation.py  test_membership.py  test_mock_data.py  test_persistence.py  test_pipeline.py  test_smoother.py  (+5 more)
(+108 files in other folders)
